[package]
name = "easytier-ohrs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

[dependencies]
easytier = {
    path = "../../easytier" 
}
ohos-hilog-binding = "^0.1.3"
napi-derive-ohrs = "^1.0.2"
napi-derive = "^2.0.0"
napi = "^2.0.0"
napi-rs = "^2.0.0"
napi-ohos = "^1.0.0"
once_cell = "^1.17.1"
serde_json = "^1.0"
tracing-subscriber = "0.3.19"
tracing-core = "0.1.33"
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4"] }

[build-dependencies]
napi-build-ohos = "1.0.4"
[profile.dev]
panic = "unwind"
debug = true

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true